Natrix/parser.automaton
State 0:
prog' -> . prog [ # ]
-- On NEWLINE shift to state 1
-- On prog shift to state 2
-- On option(NEWLINE) shift to state 3
-- On VAR reduce production option(NEWLINE) -> 
-- On TYPE reduce production option(NEWLINE) -> 
-- On RETURN reduce production option(NEWLINE) -> 
-- On PRINT reduce production option(NEWLINE) -> 
-- On IF reduce production option(NEWLINE) -> 
-- On ID reduce production option(NEWLINE) -> 
-- On FOR reduce production option(NEWLINE) -> 
-- On ESQUARE reduce production option(NEWLINE) -> 
-- On EPAREN reduce production option(NEWLINE) -> 
-- On DEF reduce production option(NEWLINE) -> 
-- On CST reduce production option(NEWLINE) -> 

State 1:
option(NEWLINE) -> NEWLINE . [ VAR TYPE RETURN PRINT IF ID FOR ESQUARE EPAREN DEF CST ]
-- On VAR reduce production option(NEWLINE) -> NEWLINE 
-- On TYPE reduce production option(NEWLINE) -> NEWLINE 
-- On RETURN reduce production option(NEWLINE) -> NEWLINE 
-- On PRINT reduce production option(NEWLINE) -> NEWLINE 
-- On IF reduce production option(NEWLINE) -> NEWLINE 
-- On ID reduce production option(NEWLINE) -> NEWLINE 
-- On FOR reduce production option(NEWLINE) -> NEWLINE 
-- On ESQUARE reduce production option(NEWLINE) -> NEWLINE 
-- On EPAREN reduce production option(NEWLINE) -> NEWLINE 
-- On DEF reduce production option(NEWLINE) -> NEWLINE 
-- On CST reduce production option(NEWLINE) -> NEWLINE 

State 2:
prog' -> prog . [ # ]
-- On # accept prog

State 3:
prog -> option(NEWLINE) . list(func) separated_nonempty_list(SEMICOLON,instr) EOF [ # ]
-- On DEF shift to state 4
-- On list(func) shift to state 133
-- On func shift to state 136
-- On VAR reduce production list(func) -> 
-- On TYPE reduce production list(func) -> 
-- On RETURN reduce production list(func) -> 
-- On PRINT reduce production list(func) -> 
-- On IF reduce production list(func) -> 
-- On ID reduce production list(func) -> 
-- On FOR reduce production list(func) -> 
-- On ESQUARE reduce production list(func) -> 
-- On EPAREN reduce production list(func) -> 
-- On CST reduce production list(func) -> 

State 4:
func -> DEF . typ ident EPAREN loption(separated_nonempty_list(VIRGULA,ident)) DPAREN AS body [ VAR TYPE RETURN PRINT IF ID FOR ESQUARE EPAREN DEF CST ]
-- On INTTYPE shift to state 5
-- On BOOLTYPE shift to state 6
-- On typ shift to state 7

State 5:
typ -> INTTYPE . [ IGUAL ID FILLED ]
-- On IGUAL reduce production typ -> INTTYPE 
-- On ID reduce production typ -> INTTYPE 
-- On FILLED reduce production typ -> INTTYPE 

State 6:
typ -> BOOLTYPE . [ IGUAL ID FILLED ]
-- On IGUAL reduce production typ -> BOOLTYPE 
-- On ID reduce production typ -> BOOLTYPE 
-- On FILLED reduce production typ -> BOOLTYPE 

State 7:
func -> DEF typ . ident EPAREN loption(separated_nonempty_list(VIRGULA,ident)) DPAREN AS body [ VAR TYPE RETURN PRINT IF ID FOR ESQUARE EPAREN DEF CST ]
-- On ID shift to state 8
-- On ident shift to state 9

State 8:
ident -> ID . [ VIRGULA VEZES THEN OR OF NEWLINE MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUAL FILLED ESQUARE EPAREN DSQUARE DPAREN DO DIVIDIR DIF AS AND ]
-- On VIRGULA reduce production ident -> ID 
-- On VEZES reduce production ident -> ID 
-- On THEN reduce production ident -> ID 
-- On OR reduce production ident -> ID 
-- On OF reduce production ident -> ID 
-- On NEWLINE reduce production ident -> ID 
-- On MENOS reduce production ident -> ID 
-- On MENORIGUAL reduce production ident -> ID 
-- On MENOR reduce production ident -> ID 
-- On MAIS reduce production ident -> ID 
-- On MAIORIGUAL reduce production ident -> ID 
-- On MAIOR reduce production ident -> ID 
-- On IN reduce production ident -> ID 
-- On IGUAL reduce production ident -> ID 
-- On FILLED reduce production ident -> ID 
-- On ESQUARE reduce production ident -> ID 
-- On EPAREN reduce production ident -> ID 
-- On DSQUARE reduce production ident -> ID 
-- On DPAREN reduce production ident -> ID 
-- On DO reduce production ident -> ID 
-- On DIVIDIR reduce production ident -> ID 
-- On DIF reduce production ident -> ID 
-- On AS reduce production ident -> ID 
-- On AND reduce production ident -> ID 

State 9:
func -> DEF typ ident . EPAREN loption(separated_nonempty_list(VIRGULA,ident)) DPAREN AS body [ VAR TYPE RETURN PRINT IF ID FOR ESQUARE EPAREN DEF CST ]
-- On EPAREN shift to state 10

State 10:
func -> DEF typ ident EPAREN . loption(separated_nonempty_list(VIRGULA,ident)) DPAREN AS body [ VAR TYPE RETURN PRINT IF ID FOR ESQUARE EPAREN DEF CST ]
-- On ID shift to state 8
-- On separated_nonempty_list(VIRGULA,ident) shift to state 11
-- On loption(separated_nonempty_list(VIRGULA,ident)) shift to state 12
-- On ident shift to state 130
-- On DPAREN reduce production loption(separated_nonempty_list(VIRGULA,ident)) -> 

State 11:
loption(separated_nonempty_list(VIRGULA,ident)) -> separated_nonempty_list(VIRGULA,ident) . [ DPAREN ]
-- On DPAREN reduce production loption(separated_nonempty_list(VIRGULA,ident)) -> separated_nonempty_list(VIRGULA,ident) 

State 12:
func -> DEF typ ident EPAREN loption(separated_nonempty_list(VIRGULA,ident)) . DPAREN AS body [ VAR TYPE RETURN PRINT IF ID FOR ESQUARE EPAREN DEF CST ]
-- On DPAREN shift to state 13

State 13:
func -> DEF typ ident EPAREN loption(separated_nonempty_list(VIRGULA,ident)) DPAREN . AS body [ VAR TYPE RETURN PRINT IF ID FOR ESQUARE EPAREN DEF CST ]
-- On AS shift to state 14

State 14:
func -> DEF typ ident EPAREN loption(separated_nonempty_list(VIRGULA,ident)) DPAREN AS . body [ VAR TYPE RETURN PRINT IF ID FOR ESQUARE EPAREN DEF CST ]
-- On VAR shift to state 15
-- On TYPE shift to state 18
-- On RETURN shift to state 79
-- On PRINT shift to state 81
-- On NEWLINE shift to state 105
-- On IF shift to state 107
-- On ID shift to state 8
-- On FOR shift to state 110
-- On ESQUARE shift to state 21
-- On EPAREN shift to state 22
-- On CST shift to state 24
-- On instr_simples shift to state 115
-- On instr shift to state 117
-- On ident shift to state 25
-- On expr shift to state 99
-- On body shift to state 129

State 15:
instr_simples -> VAR . ident AS instr_simples FILLED BY expr [ NEWLINE FILLED ]
instr_simples -> VAR . ident AS typ IGUAL expr [ NEWLINE FILLED ]
instr_simples -> VAR . ident AS ARRAY expr OF typ FILLED BY expr [ NEWLINE FILLED ]
-- On ID shift to state 8
-- On ident shift to state 16

State 16:
instr_simples -> VAR ident . AS instr_simples FILLED BY expr [ NEWLINE FILLED ]
instr_simples -> VAR ident . AS typ IGUAL expr [ NEWLINE FILLED ]
instr_simples -> VAR ident . AS ARRAY expr OF typ FILLED BY expr [ NEWLINE FILLED ]
-- On AS shift to state 17

State 17:
instr_simples -> VAR ident AS . instr_simples FILLED BY expr [ NEWLINE FILLED ]
instr_simples -> VAR ident AS . typ IGUAL expr [ NEWLINE FILLED ]
instr_simples -> VAR ident AS . ARRAY expr OF typ FILLED BY expr [ NEWLINE FILLED ]
-- On VAR shift to state 15
-- On TYPE shift to state 18
-- On RETURN shift to state 79
-- On PRINT shift to state 81
-- On INTTYPE shift to state 5
-- On ID shift to state 8
-- On ESQUARE shift to state 21
-- On EPAREN shift to state 22
-- On CST shift to state 24
-- On BOOLTYPE shift to state 6
-- On ARRAY shift to state 85
-- On typ shift to state 92
-- On instr_simples shift to state 95
-- On ident shift to state 25
-- On expr shift to state 99

State 18:
instr_simples -> TYPE . ident IGUAL ARRAY expr OF expr [ NEWLINE FILLED ]
instr_simples -> TYPE . ident IGUAL expr [ NEWLINE FILLED ]
-- On ID shift to state 8
-- On ident shift to state 19

State 19:
instr_simples -> TYPE ident . IGUAL ARRAY expr OF expr [ NEWLINE FILLED ]
instr_simples -> TYPE ident . IGUAL expr [ NEWLINE FILLED ]
-- On IGUAL shift to state 20

State 20:
instr_simples -> TYPE ident IGUAL . ARRAY expr OF expr [ NEWLINE FILLED ]
instr_simples -> TYPE ident IGUAL . expr [ NEWLINE FILLED ]
-- On ID shift to state 8
-- On ESQUARE shift to state 21
-- On EPAREN shift to state 22
-- On CST shift to state 24
-- On ARRAY shift to state 74
-- On ident shift to state 25
-- On expr shift to state 78

State 21:
expr -> ESQUARE . CST TO expr DSQUARE [ VIRGULA VEZES THEN OR OF NEWLINE MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FILLED ESQUARE DSQUARE DPAREN DO DIVIDIR DIF AND ]
expr -> ESQUARE . loption(separated_nonempty_list(VIRGULA,expr)) DSQUARE [ VIRGULA VEZES THEN OR OF NEWLINE MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FILLED ESQUARE DSQUARE DPAREN DO DIVIDIR DIF AND ]
-- On ID shift to state 8
-- On ESQUARE shift to state 21
-- On EPAREN shift to state 22
-- On CST shift to state 68
-- On separated_nonempty_list(VIRGULA,expr) shift to state 27
-- On loption(separated_nonempty_list(VIRGULA,expr)) shift to state 72
-- On ident shift to state 25
-- On expr shift to state 30
-- On DSQUARE reduce production loption(separated_nonempty_list(VIRGULA,expr)) -> 

State 22:
expr -> EPAREN . expr DPAREN [ VIRGULA VEZES THEN OR OF NEWLINE MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FILLED ESQUARE DSQUARE DPAREN DO DIVIDIR DIF AND ]
expr -> EPAREN . MENOS expr DPAREN [ VIRGULA VEZES THEN OR OF NEWLINE MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FILLED ESQUARE DSQUARE DPAREN DO DIVIDIR DIF AND ]
expr -> EPAREN . NOT expr DPAREN [ VIRGULA VEZES THEN OR OF NEWLINE MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FILLED ESQUARE DSQUARE DPAREN DO DIVIDIR DIF AND ]
-- On NOT shift to state 23
-- On MENOS shift to state 63
-- On ID shift to state 8
-- On ESQUARE shift to state 21
-- On EPAREN shift to state 22
-- On CST shift to state 24
-- On ident shift to state 25
-- On expr shift to state 66

State 23:
expr -> EPAREN NOT . expr DPAREN [ VIRGULA VEZES THEN OR OF NEWLINE MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FILLED ESQUARE DSQUARE DPAREN DO DIVIDIR DIF AND ]
-- On ID shift to state 8
-- On ESQUARE shift to state 21
-- On EPAREN shift to state 22
-- On CST shift to state 24
-- On ident shift to state 25
-- On expr shift to state 61

State 24:
expr -> CST . [ VIRGULA VEZES THEN OR OF NEWLINE MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FILLED ESQUARE DSQUARE DPAREN DO DIVIDIR DIF AND ]
-- On VIRGULA reduce production expr -> CST 
-- On VEZES reduce production expr -> CST 
-- On THEN reduce production expr -> CST 
-- On OR reduce production expr -> CST 
-- On OF reduce production expr -> CST 
-- On NEWLINE reduce production expr -> CST 
-- On MENOS reduce production expr -> CST 
-- On MENORIGUAL reduce production expr -> CST 
-- On MENOR reduce production expr -> CST 
-- On MAIS reduce production expr -> CST 
-- On MAIORIGUAL reduce production expr -> CST 
-- On MAIOR reduce production expr -> CST 
-- On IGUAL reduce production expr -> CST 
-- On FILLED reduce production expr -> CST 
-- On ESQUARE reduce production expr -> CST 
-- On DSQUARE reduce production expr -> CST 
-- On DPAREN reduce production expr -> CST 
-- On DO reduce production expr -> CST 
-- On DIVIDIR reduce production expr -> CST 
-- On DIF reduce production expr -> CST 
-- On AND reduce production expr -> CST 

State 25:
expr -> ident . optarg [ VIRGULA VEZES THEN OR OF NEWLINE MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FILLED ESQUARE DSQUARE DPAREN DO DIVIDIR DIF AND ]
-- On EPAREN shift to state 26
-- On optarg shift to state 60
-- On VIRGULA reduce production optarg -> 
-- On VEZES reduce production optarg -> 
-- On THEN reduce production optarg -> 
-- On OR reduce production optarg -> 
-- On OF reduce production optarg -> 
-- On NEWLINE reduce production optarg -> 
-- On MENOS reduce production optarg -> 
-- On MENORIGUAL reduce production optarg -> 
-- On MENOR reduce production optarg -> 
-- On MAIS reduce production optarg -> 
-- On MAIORIGUAL reduce production optarg -> 
-- On MAIOR reduce production optarg -> 
-- On IGUAL reduce production optarg -> 
-- On FILLED reduce production optarg -> 
-- On ESQUARE reduce production optarg -> 
-- On DSQUARE reduce production optarg -> 
-- On DPAREN reduce production optarg -> 
-- On DO reduce production optarg -> 
-- On DIVIDIR reduce production optarg -> 
-- On DIF reduce production optarg -> 
-- On AND reduce production optarg -> 

State 26:
optarg -> EPAREN . loption(separated_nonempty_list(VIRGULA,expr)) DPAREN [ VIRGULA VEZES THEN OR OF NEWLINE MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FILLED ESQUARE DSQUARE DPAREN DO DIVIDIR DIF AND ]
-- On ID shift to state 8
-- On ESQUARE shift to state 21
-- On EPAREN shift to state 22
-- On CST shift to state 24
-- On separated_nonempty_list(VIRGULA,expr) shift to state 27
-- On loption(separated_nonempty_list(VIRGULA,expr)) shift to state 28
-- On ident shift to state 25
-- On expr shift to state 30
-- On DPAREN reduce production loption(separated_nonempty_list(VIRGULA,expr)) -> 

State 27:
loption(separated_nonempty_list(VIRGULA,expr)) -> separated_nonempty_list(VIRGULA,expr) . [ DSQUARE DPAREN ]
-- On DSQUARE reduce production loption(separated_nonempty_list(VIRGULA,expr)) -> separated_nonempty_list(VIRGULA,expr) 
-- On DPAREN reduce production loption(separated_nonempty_list(VIRGULA,expr)) -> separated_nonempty_list(VIRGULA,expr) 

State 28:
optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) . DPAREN [ VIRGULA VEZES THEN OR OF NEWLINE MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FILLED ESQUARE DSQUARE DPAREN DO DIVIDIR DIF AND ]
-- On DPAREN shift to state 29

State 29:
optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN . [ VIRGULA VEZES THEN OR OF NEWLINE MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FILLED ESQUARE DSQUARE DPAREN DO DIVIDIR DIF AND ]
-- On VIRGULA reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On VEZES reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On THEN reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On OR reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On OF reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On NEWLINE reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On MENOS reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On MENORIGUAL reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On MENOR reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On MAIS reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On MAIORIGUAL reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On MAIOR reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On IGUAL reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On FILLED reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On ESQUARE reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On DSQUARE reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On DPAREN reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On DO reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On DIVIDIR reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On DIF reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 
-- On AND reduce production optarg -> EPAREN loption(separated_nonempty_list(VIRGULA,expr)) DPAREN 

State 30:
expr -> expr . MAIS expr [ VIRGULA VEZES OR MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL ESQUARE DSQUARE DPAREN DIVIDIR DIF AND ]
expr -> expr . MENOS expr [ VIRGULA VEZES OR MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL ESQUARE DSQUARE DPAREN DIVIDIR DIF AND ]
expr -> expr . VEZES expr [ VIRGULA VEZES OR MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL ESQUARE DSQUARE DPAREN DIVIDIR DIF AND ]
expr -> expr . DIVIDIR expr [ VIRGULA VEZES OR MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL ESQUARE DSQUARE DPAREN DIVIDIR DIF AND ]
expr -> expr . IGUAL expr [ VIRGULA VEZES OR MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL ESQUARE DSQUARE DPAREN DIVIDIR DIF AND ]
expr -> expr . DIF expr [ VIRGULA VEZES OR MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL ESQUARE DSQUARE DPAREN DIVIDIR DIF AND ]
expr -> expr . MAIOR expr [ VIRGULA VEZES OR MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL ESQUARE DSQUARE DPAREN DIVIDIR DIF AND ]
expr -> expr . MAIORIGUAL expr [ VIRGULA VEZES OR MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL ESQUARE DSQUARE DPAREN DIVIDIR DIF AND ]
expr -> expr . MENOR expr [ VIRGULA VEZES OR MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL ESQUARE DSQUARE DPAREN DIVIDIR DIF AND ]
expr -> expr . MENORIGUAL expr [ VIRGULA VEZES OR MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL ESQUARE DSQUARE DPAREN DIVIDIR DIF AND ]
expr -> expr . AND expr [ VIRGULA VEZES OR MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL ESQUARE DSQUARE DPAREN DIVIDIR DIF AND ]
expr -> expr . OR expr [ VIRGULA VEZES OR MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL ESQUARE DSQUARE DPAREN DIVIDIR DIF AND ]
expr -> expr . ESQUARE expr DSQUARE [ VIRGULA VEZES OR MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL ESQUARE DSQUARE DPAREN DIVIDIR DIF AND ]
separated_nonempty_list(VIRGULA,expr) -> expr . [ DSQUARE DPAREN ]
separated_nonempty_list(VIRGULA,expr) -> expr . VIRGULA separated_nonempty_list(VIRGULA,expr) [ DSQUARE DPAREN ]
-- On VIRGULA shift to state 31
-- On VEZES shift to state 33
-- On OR shift to state 37
-- On MENOS shift to state 39
-- On MENORIGUAL shift to state 43
-- On MENOR shift to state 47
-- On MAIS shift to state 45
-- On MAIORIGUAL shift to state 49
-- On MAIOR shift to state 51
-- On IGUAL shift to state 53
-- On ESQUARE shift to state 35
-- On DIVIDIR shift to state 41
-- On DIF shift to state 55
-- On AND shift to state 57
-- On DSQUARE reduce production separated_nonempty_list(VIRGULA,expr) -> expr 
-- On DPAREN reduce production separated_nonempty_list(VIRGULA,expr) -> expr 

State 31:
separated_nonempty_list(VIRGULA,expr) -> expr VIRGULA . separated_nonempty_list(VIRGULA,expr) [ DSQUARE DPAREN ]
-- On ID shift to state 8
-- On ESQUARE shift to state 21
-- On EPAREN shift to state 22
-- On CST shift to state 24
-- On separated_nonempty_list(VIRGULA,expr) shift to state 32
-- On ident shift to state 25
-- On expr shift to state 30

State 32:
separated_nonempty_list(VIRGULA,expr) -> expr VIRGULA separated_nonempty_list(VIRGULA,expr) . [ DSQUARE DPAREN ]
-- On DSQUARE reduce production separated_nonempty_list(VIRGULA,expr) -> expr VIRGULA separated_nonempty_list(VIRGULA,expr) 
-- On DPAREN reduce production separated_nonempty_list(VIRGULA,expr) -> expr VIRGULA separated_nonempty_list(VIRGULA,expr) 

State 33:
expr -> expr VEZES . expr [ VIRGULA VEZES THEN OR OF NEWLINE MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FILLED ESQUARE DSQUARE DPAREN DO DIVIDIR DIF AND ]
-- On ID shift to state 8
-- On ESQUARE shift to state 21
-- On EPAREN shift to state 22
-- On CST shift to state 24
-- On ident shift to state 25
-- On expr shift to state 34
